Do not silently crash when incompatible mod is installed

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -28,6 +28,14 @@ versionRange = "[1.20.4,1.21.1)"
 ordering = "NONE"
 side = "CLIENT"
 
+[[dependencies.sodium]]
+modId = "embeddium"
+type = "incompatible"
+reason = "Sodium and Embeddium cannot be used together. Please remove Embeddium."
+versionRange = "[0.0.1,)"
+ordering = "NONE"
+side = "CLIENT"
+
 [[mixins]]
 config = "sodium.mixins.json"
 
