--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -11,8 +11,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
@@ -22,11 +25,11 @@ jobs:
         with:
           cache-read-only: true
 
-      - name: Execute Gradle build
+      - name: Execute Gradle Build
         run: ./gradlew build -Pbuild.release=true
 
-      - name: Upload assets to GitHub
-        uses: AButler/upload-release-assets@v2.0
+      - name: Upload Assets to GitHub
+        uses: AButler/upload-release-assets@v3.0
         with:
           # Filter built files to disregard -sources and -dev, and leave only the minecraft-compatible jars.
           files: 'build/libs/*[0-9].jar;LICENSE'
