Fix multiple review issues
- Move Flawless Frames integration
- Rename and modify many services
- Made SpriteFinder independent of Fabric API
- Added more explicit interfaces

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "*"
-license = "Polyform-Shield-1.0"
+license = "Polyform-Shield-1.0.0"
 
 [[mods]]
 modId = "sodium"
@@ -10,7 +10,9 @@ displayName = "Sodium"
 
 logoFile = "sodium-icon.png" #optional
 
-authors = "JellySquid"
+authors = "JellySquid, IMS212"
+
+credits = "@bytzo, @PepperCode1, @FlashyReese, @altrisi, @Grayray75, @Madis0, @Johni0702, @comp500, @coderbot16, @Moulberry, @MCRcortex, @Altirix, @embeddedt, @pajicadvance, @Kroppeb, @douira, @burgerindividual, @TwistedZero, @Leo40Git, @haykam821"
 
 description = '''
 Sodium is a powerful rendering engine for Minecraft which improves frame rates and reduces lag spikes.
