Early draft for single-pass compositing
This is a very early revision of the idea. Some (most) things don't
work currently.

--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -18,3 +18,5 @@ public com.mojang.blaze3d.vertex.PoseStack$Pose trustedNormals # trustedNormals
 public net.minecraft.world.level.GrassColor pixels
 public net.minecraft.world.level.FoliageColor pixels
 public net.minecraft.client.renderer.FogRenderer getPriorityFogFunction(Lnet/minecraft/world/entity/Entity;F)Lnet/minecraft/client/renderer/FogRenderer$MobEffectFogFunction;
+
+public com.mojang.blaze3d.pipeline.MainTarget$Dimension
