Fix Actions artifacts

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -38,6 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sodium-artifacts-${{ steps.ref.outputs.branch }}
-          path: |
-            neoforge/build/libs/*.jar
-            fabric/build/libs/*.jar
+          path: build/libs/*.jar
